# recipe-vault-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
alembic/: env.py
alembic/versions/: d62cf22665be_create_user_and_recipe_tables.py
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  recipes.py  users.py
app/core/: config.py  security.py
app/db/: base.py  crud_recipe.py  crud_user.py  session.py
app/models/: __init__.py  recipe.py  user.py
app/schemas/: recipe.py  user.py
tests/: conftest.py  test_smoke.py
tests/api/: test_recipes.py
tests/crud/: test_recipe.py
tests/unit/: test_security.py
